<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="LogArrayStruct" Id="{68500ed9-9ebe-0a74-06db-2a8a3ff71ce6}">
    <Declaration><![CDATA[TYPE LogArrayStruct :
STRUCT
	TIME_TC : TIMESTRUCT; //Oren modification to Beckhoff
	Angle : UINT;
	data : LogMsgLogData;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>