<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="LogMsgLogData" Id="{20de93b6-c232-0d74-285a-0e30868a1c9a}">
    <Declaration><![CDATA[TYPE LogMsgLogData :
STRUCT
		category : STRING(LOG_MSG_CATEGORY_LENGTH);
		levelSeverity : enumLogMessageLevelSeverity;
		text : STRING[LOG_MSG_TEXT_LENGTH];
		params_tc : ARRAY[0..MAX_COUNT_LOG_PARAM] OF DINT;
		noParams : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>